# lab8

./: .gitignore  CMakeLists.txt  README.md  grid.cpp  grid.h  main.cpp  pathfinding.h
.py/: plot_forest_path.py  plot_scenario_metrics.py  plot_series_metrics.py  save_run_log_from_build.py
include/: grid.h  pathfinding.h  scenarios.h
src/: grid.cpp  main.cpp  pathfinding.cpp  scenarios.cpp
